# LiveLanguageLexiconView

./: README.md  llview.spec  pyproject.toml
.github/workflows/: action.yml
livelanguagelexiconview/src/: llview.py  que.xml
src/: llview.py
