[tool.poetry]
name = "livelanguagelexiconview"
version = "0.1.0"
description = ""
authors = ["yesunerdene <yesuuygls@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PySimpleGUI = "^4.60.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
